Remove obsolete liveness handle (#10)
* Remove /liveness handle - we don't really use it
